# ViT

./: .gitignore  README.md  dataset_loader.py  fault_injection.py  ff_logits_vit_small.pt  logits.py  main.py  program.prof  program_ff.prof  pyproject.toml  requirements.txt  results.txt  results_faultfree.txt  results_faulty.txt  results_vit_small_faultfree.txt  results_vit_small_faulty.txt  run_HPC.sh  vit_tiny_graph
.old/: main_old.py
detection_baselines/: det_baseline_vit_tiny_all.json
jobs/: dcgm-gpu-stats-amp1.hpclocal-852086.out  dcgm-gpu-stats-amp1.hpclocal-852089.out  dcgm-gpu-stats-amp1.hpclocal-852093.out  dcgm-gpu-stats-amp1.hpclocal-852101.out  dcgm-gpu-stats-amp1.hpclocal-852102.out  dcgm-gpu-stats-amp1.hpclocal-852104.out  dcgm-gpu-stats-amp1.hpclocal-852107.out  dcgm-gpu-stats-amp1.hpclocal-852108.out  dcgm-gpu-stats-amp1.hpclocal-852109.out  dcgm-gpu-stats-amp1.hpclocal-852110.out  dcgm-gpu-stats-amp1.hpclocal-852111.out  dcgm-gpu-stats-amp1.hpclocal-852112.out  dcgm-gpu-stats-amp1.hpclocal-852113.out  dcgm-gpu-stats-amp1.hpclocal-852132.out  dcgm-gpu-stats-amp1.hpclocal-852133.out  dcgm-gpu-stats-amp1.hpclocal-852134.out  dcgm-gpu-stats-amp1.hpclocal-852135.out  dcgm-gpu-stats-amp1.hpclocal-852136.out  slurm-852086.out  slurm-852086.stat  slurm-852089.out  slurm-852089.stat  slurm-852093.out  slurm-852093.stat  slurm-852101.out  slurm-852101.stat  slurm-852102.out  slurm-852102.stat  slurm-852104.out  slurm-852104.stat  slurm-852107.out  slurm-852107.stat  slurm-852108.out  slurm-852108.stat  slurm-852109.stat  slurm-852110.stat  slurm-852111.out  slurm-852111.stat  slurm-852112.stat  slurm-852113.out  (+9 more)
jobs/logs/slurm/: slurm-836951.err  slurm-836952.err
logs/test/: results_fi_1.txt  results_fi_10_1.txt
model_info/: DeiT
research/: ViT  vision_transfomer.py
results/: plot.py  plot_activations.py  results_fi_2.txt  results_fi_25_1.txt  results_fi_50_1.txt  summary_deit_tiny_faultfree.json  summary_deit_tiny_faulty.json  summary_vit_base_faultfree.json  summary_vit_base_faulty.json  summary_vit_small_faultfree.json  summary_vit_small_faulty.json  summary_vit_tiny_faulty.json
results/aa_50000samples/: activations_deit_tiny_64000samples_20260130.json  activations_swin_tiny_64000samples_20260130.json  activations_vit_base_64000samples_20260130.json  activations_vit_tiny_64000samples_20260130.json  swin_tiny_faulty_12800samples_20260130.json
results/base_accuracy/: deit_tiny.json
results/fi_exponent_12800samples/: plot.py  summary_deit_tiny_faulty.json  summary_swin_tiny_faulty.json  summary_vit_tiny_faulty.json
runs/vit_tiny/: events.out.tfevents.1771240732.archlinux.23268.0
scripts/: new_method.py  run_HPC.sh  run_detection.sh  softavg_testing.py  softavg_testing_simple.py  tensor_@.py  test_amp_speed.py  trace_model.py
scripts/testing_scripts/: debug_sdc.py  model_tracing.py
scripts/unrestricted_fi/: run_deit_tiny.sh  run_swin_tiny.sh  run_swin_tiny_1.sh  run_swin_tiny_2.sh  run_vit_tiny.sh  test_run.sh
src/: __init__.py  cli.py  main.py
src/analysis/: __init__.py
src/config/: settings.py
src/core/: __init__.py  analyzer.py  bits.py  config.py  data.py  layers.py  model.py  runner.py
src/data/: imagenet_loader.py
src/detection/: __init__.py  baseline.py  checkone.py  checksum.py
src/eval/: __init__.py  accuracy.py  metrics.py  sdc.py
src/fault_injector/: fault_injection.py
src/injection/: __init__.py  injector.py  input_injector.py
src/metrics/: __init__.py  accuracy.py  activation_analyzer.py  sdc.py
src/testing/: test_collector_merge.py  test_model_strucutre.py  test_neuro.py  test_structure.py  test_tensor_mult.py  test_weight_analysis.py  testing_for_nan.py  trace_attention.py  verify_structure.py
src/utils/: __init__.py  formatting.py  helper.py  logits.py
src/vit_fault/: __init__.py  cli.py
test/ViT_run/: vit_run.py  vit_single_run.py
tests/: conftest.py  test_detection.py  test_forward_passthrough.py  test_injection.py  test_input_injection.py  test_neuro.py
vit_fault_injection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+36 files in other folders)
