[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-fault-injection"
version = "0.1.0"
description = "Vision Transformer Fault Injection Framework for Reliability Analysis"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["vision-transformer", "fault-injection", "reliability", "ai-safety", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "timm>=0.9.0",  # for pre-trained ViT models
    "Pillow>=9.0.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.5.0",  # for result visualization
    "pandas>=1.5.0",      # for results analysis
    "scipy>=1.9.0",       # for statistical analysis
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
hpc = [
    "mpi4py>=3.1.0",
    "slurm-pipeline>=1.1.4",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
vit-fault-inject = "src.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/vit-fault-injection"
"Repository" = "https://github.com/yourusername/vit-fault-injection"
"Bug Reports" = "https://github.com/yourusername/vit-fault-injection/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

# Optional: Code quality tools configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  | __pycache__
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --color=yes"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
