[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-fault-injection"
version = "0.1.0"
description = "Vision Transformer Fault Injection Framework for Reliability Analysis"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
]

[project.scripts]
vit-inject = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
